--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prebuild": "rm -rf _site",
+    "prebuild": "rm -rf docs",
     "build": "eleventy"
   },
   "keywords": [],
